Fixing Background Issue on Mobile Devices

--- a/style.css
+++ b/style.css
@@ -498,6 +498,9 @@ footer{
 }
 
 @media (max-width: 600px) {
+    .parallax1, .parallax2, .parallax3, .parallax4 {
+        background-attachment: initial;
+    }
     nav {
         position: fixed;
         width: 100%;
@@ -579,6 +582,9 @@ footer{
 }
 
 @media (max-width: 450px) {
+    .parallax1, .parallax2, .parallax3, .parallax4 {
+        background-attachment: initial;
+    }
     .connect_background{
         margin-top: 0rem;
     }
@@ -629,6 +635,9 @@ footer{
 }
 
 @media (max-width: 300px) {
+    .parallax1, .parallax2, .parallax3, .parallax4 {
+        background-attachment: initial;
+    }
     .connect_background{
         margin-top: 0rem;
     }
